<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.grovermodule.fragment.FragmentMission">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mission_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_black"
                android:gravity="center|top"
                android:text="@string/mission_control"
                android:textSize="28sp" />
<!--

            <TextView
                android:id="@+id/mission_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|top"
                android:text="@string/current_mission"
                android:textSize="24sp" />
-->

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/title_mission"
                android:src="@drawable/ic_car_black_24dp" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/climateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mission1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:text="@string/climate"
                    android:textSize="26sp" />

                <Spinner
                    android:id="@+id/climate_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="match_parent"
                    android:entries="@array/climate_types"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:popupBackground="@color/white"
                    android:prompt="@string/spinner_climate_prompt"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/mission_temp_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:text="@string/climate_temp_high"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mission_temp_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:text="@string/climate_temp_low"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mission_baro_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:text="@string/climate_baro_high"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mission_baro_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:text="@string/climate_baro_low"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mission_humid_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:text="@string/climate_humid_high"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mission_humid_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:text="@string/climate_humid_low"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:contentDescription="@string/content_description_placeholder_for_image_capture"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image_black_24dp" />

                <Button
                    android:id="@+id/capture_image_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capture_image" />

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/missionCommanderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/missionCommanderName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/mission_commander_name"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/retrieve_mission_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/retrieve_mission_data" />

            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/blankSpacer"
                android:layout_width="match_parent"
                android:layout_height="75dp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>