<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.grovermodule.fragment.FragmentDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dashboard_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/batteryLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/device_battery_level"
            android:textSize="26sp"
            android:drawableTop="@drawable/ic_battery_full_black_24dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <TextView
            android:id="@+id/wifiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/x"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/wifiText"
            android:textSize="20sp"
            android:drawableTop="@drawable/ic_wifi_black_24dp"
             />
        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <TextView
            android:id="@+id/cellText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/x"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/cellText"
            android:textSize="20sp"
            android:drawableTop="@drawable/ic_signal_cellular_4_bar_black_24dp"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/speedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/speedText"
            android:textSize="20sp" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/bluetoothTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/x"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/accelText"
                android:textSize="20sp"
                android:visibility="visible" />


        </RelativeLayout>
    </LinearLayout>

</FrameLayout>