<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.grovermodule.fragment.FragmentSettings">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center|top"
                android:text="@string/title_settings"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timer_header"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:gravity="center_vertical|start"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:text="@string/frequency_of_data_saving"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/timer_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45"
                    android:dropDownWidth="match_parent"
                    android:entries="@array/timer_intervals"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:popupBackground="@color/white"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notifications_header"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45"
                    android:gravity="center_vertical|start"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:text="@string/notifications"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/notifications"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_weight="0.55"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notifications_desired_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/notification_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/notification_email_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:gravity="center_vertical|start"
                        android:labelFor="@+id/notification_email_input"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="@string/email"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/notification_email_input"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="0.6"
                        android:autofillHints="Email"
                        android:gravity="center_vertical"
                        android:importantForAutofill="yes"
                        android:inputType="textEmailAddress"
                        tools:targetApi="26" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notification_sms_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/notification_sms_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:gravity="center_vertical|start"
                        android:labelFor="@id/notification_sms_input"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="@string/sms_text_message"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/notification_sms_input"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="0.6"
                        android:autofillHints="phone"
                        android:gravity="center_vertical"
                        android:importantForAutofill="yes"
                        android:inputType="phone"
                        android:maxLength="10"
                        tools:targetApi="26" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/save"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sendEmailButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/send_email"
                android:textSize="18sp"
                android:enabled="false"/>

            <Button
                android:id="@+id/sendSMSButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/send_sms"
                android:textSize="18sp"
                android:enabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</FrameLayout>